--- a/bcapp_client/app/src/main/res/layout/activity_bet.xml
+++ b/bcapp_client/app/src/main/res/layout/activity_bet.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,43 +13,85 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="100dp"
         android:orientation="vertical">
 
-        <android.support.design.widget.TextInputLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColorHint="@color/main_text_color">
+            android:layout_height="match_parent">
 
-            <AutoCompleteTextView
-                android:id="@+id/nicknameTv"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/team1Tv"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
                 android:gravity="center"
-                android:hint="@string/nickname"
-                android:inputType="text"
-                android:maxLines="1"
-                android:singleLine="true"
+                android:text="TEAM 1"
+                android:textColor="@color/main_text_color"
+                android:textSize="30sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:text="VS"
+                android:textColor="@color/main_text_color"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/team2Tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="40dp"
+                android:text="TEAM 2"
+                android:textColor="@color/main_text_color"
+                android:textSize="30sp" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="246dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/team1winTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:gravity="center"
+                android:text="team1 win"
                 android:textColor="@color/main_text_color" />
 
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColorHint="@color/main_text_color">
-
-            <AutoCompleteTextView
-                android:id="@+id/mobileNumberTv"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/drawTv"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:hint="@string/mobile_number"
-                android:inputType="text"
-                android:maxLines="1"
-                android:singleLine="true"
+                android:layout_centerHorizontal="true"
+                android:text="draw"
                 android:textColor="@color/main_text_color" />
 
-        </android.support.design.widget.TextInputLayout>
+            <TextView
+                android:id="@+id/team2winTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="40dp"
+                android:text="team2 win"
+                android:textColor="@color/main_text_color" />
+
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -60,41 +101,108 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true">
 
-        <Button
-            android:id="@+id/team1win"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rectangle"
-            android:text="1.0"
-            android:textColor="@color/black" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/draw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rectangle"
-            android:text="3.0"
-            android:textColor="@color/black" />
+            <Button
+                android:id="@+id/team1winCoefBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="30dp"
+                android:background="@drawable/rectangle"
+                android:text="1.0"
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/drawCoefBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/rectangle"
+                android:text="3.0"
+                android:textColor="@color/black" />
 
 
-        <Button
-            android:id="@+id/team2win"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rectangle"
-            android:text="2.0"
-            android:textColor="@color/black" />
+            <Button
+                android:id="@+id/team2winCoefBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="30dp"
+                android:background="@drawable/rectangle"
+                android:text="2.0"
+                android:textColor="@color/black" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="138dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp"
+                android:textColorHint="@color/main_text_color">
+
+                <AutoCompleteTextView
+                    android:id="@+id/betSumATv"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:descendantFocusability="beforeDescendants"
+                    android:focusableInTouchMode="true"
+                    android:hint="enter bet sum"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="@color/main_text_color" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="20dp"
+                android:textColorHint="@color/main_text_color">
+
+                <AutoCompleteTextView
+                    android:id="@+id/yourWinATv"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:hint="your win"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="@color/main_text_color" />
+            </android.support.design.widget.TextInputLayout>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/checkBtn"
+        android:id="@+id/next_to_preview_bet"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
         android:text="@string/go_continue"
