--- a/bcapp_client/app/src/main/res/drawable/choose_rectangle.xml
+++ b/bcapp_client/app/src/main/res/drawable/choose_rectangle.xml
@@ -1,5 +1,6 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/red" />
+    <solid android:color="@color/reddy" />
     <corners android:radius="7dp" />
+    <stroke android:width="3dip" android:color="#FF1040"/>
 </shape>
