--- a/bcapp_client/app/src/main/res/drawable/rectangle.xml
+++ b/bcapp_client/app/src/main/res/drawable/rectangle.xml
@@ -2,4 +2,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/main_text_color" />
     <corners android:radius="7dp" />
+    <stroke android:width="3dip" android:color="#FF1040"/>
 </shape>
