--- a/bcapp_client/app/src/main/res/layout/activity_login.xml
+++ b/bcapp_client/app/src/main/res/layout/activity_login.xml
@@ -15,13 +15,16 @@
         android:id="@+id/startingLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
         android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/nicknameTIL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="@color/main_text_color">
+            android:textColorHint="@color/yellow">
 
             <AutoCompleteTextView
                 android:id="@+id/nicknameTv"
@@ -30,6 +33,7 @@
                 android:gravity="center"
                 android:hint="@string/nickname"
                 android:inputType="text"
+                android:maxLength="10"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:textColor="@color/main_text_color" />
@@ -37,9 +41,10 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/mobileNumberTIL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="@color/main_text_color">
+            android:textColorHint="@color/yellow">
 
             <AutoCompleteTextView
                 android:id="@+id/mobileNumberTv"
@@ -47,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:hint="@string/mobile_number"
+                android:maxLength="12"
                 android:inputType="phone"
                 android:maxLines="1"
                 android:singleLine="true"
@@ -70,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:textColorHint="@color/main_text_color">
+            android:textColorHint="@color/yellow">
 
             <AutoCompleteTextView
                 android:id="@+id/codeTv"
@@ -79,6 +85,7 @@
                 android:gravity="center"
                 android:inputType="number"
                 android:maxLines="1"
+                android:maxLength="6"
                 android:singleLine="true"
                 android:textColor="@color/main_text_color" />
 
@@ -105,7 +112,6 @@
             android:gravity="center"
             android:text="@string/reset"
             android:textColor="@color/black" />
-
 
     </LinearLayout>
 
