--- a/bcapp_client/app/src/main/res/values/colors.xml
+++ b/bcapp_client/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="main_background_color">#333444</color>
     <color name="main_text_color">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="red">#FFB000</color>
+    <color name="reddy">#FFB000</color>
+    <color name="yellow">#FFF917</color>
+    <color name="secure_color">#FF1040</color>
 </resources>
