--- a/bcapp_client/app/src/main/res/layout/activity_auth.xml
+++ b/bcapp_client/app/src/main/res/layout/activity_auth.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/main_background_color"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -66,16 +67,26 @@
 
             </android.support.design.widget.TextInputLayout>
 
-                <Button
-                    android:id="@+id/sendMessageBtn"
+                <com.balysv.materialripple.MaterialRippleLayout
                     android:layout_width="120dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/rectangle"
-                    android:gravity="center"
-                    android:text="@string/send_sms"
-                    android:textColor="@color/black" />
+                    app:mrl_rippleOverlay="true"
+                    app:mrl_rippleColor="@color/main_background_color"
+                    app:mrl_rippleDelayClick="false"
+                    app:mrl_rippleHover="true">
+
+                    <Button
+                        android:id="@+id/sendMessageBtn"
+                        android:layout_width="120dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/rectangle"
+                        android:gravity="center"
+                        android:text="@string/send_sms"
+                        android:textColor="@color/black" />
+
+                </com.balysv.materialripple.MaterialRippleLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/codeTil"
@@ -98,29 +109,47 @@
 
             </android.support.design.widget.TextInputLayout>
 
-                <Button
-                    android:id="@+id/checkBtn"
-                    android:layout_width="120dp"
-                    android:layout_height="match_parent"
+                <com.balysv.materialripple.MaterialRippleLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/rectangle"
-                    android:gravity="center"
-                    android:text="@string/check"
-                    android:textColor="@color/black" />
+                    app:mrl_rippleOverlay="true"
+                    app:mrl_rippleColor="@color/main_background_color"
+                    app:mrl_rippleDelayClick="false"
+                    app:mrl_rippleHover="true">
 
+                    <Button
+                        android:id="@+id/checkBtn"
+                        android:layout_width="120dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/rectangle"
+                        android:gravity="center"
+                        android:text="@string/check"
+                        android:textColor="@color/black" />
 
+                </com.balysv.materialripple.MaterialRippleLayout>
 
-                <Button
-                    android:id="@+id/resetBtn"
-                    android:layout_width="120dp"
-                    android:layout_height="match_parent"
+                <com.balysv.materialripple.MaterialRippleLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/rectangle"
-                    android:gravity="center"
-                    android:text="@string/reset"
-                    android:textColor="@color/black" />
+                    app:mrl_rippleOverlay="true"
+                    app:mrl_rippleColor="@color/main_background_color"
+                    app:mrl_rippleDelayClick="false"
+                    app:mrl_rippleHover="true">
+
+                    <Button
+                        android:id="@+id/resetBtn"
+                        android:layout_width="120dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/rectangle"
+                        android:gravity="center"
+                        android:text="@string/reset"
+                        android:textColor="@color/black" />
+
+                </com.balysv.materialripple.MaterialRippleLayout>
 
         </LinearLayout>
 
