--- a/bcapp_client/app/src/main/res/layout/activity_oracle.xml
+++ b/bcapp_client/app/src/main/res/layout/activity_oracle.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/main_background_color"
     tools:context=".Activities.OracleActivity">
 
@@ -53,26 +53,47 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/yeapBtn"
-                android:layout_width="110dp"
+            <com.balysv.materialripple.MaterialRippleLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="50dp"
-                android:background="@drawable/rectangle"
-                android:text="@string/yeap"
-                android:textColor="@color/black" />
+                app:mrl_rippleOverlay="true"
+                app:mrl_rippleColor="@color/main_background_color"
+                app:mrl_rippleDelayClick="false"
+                app:mrl_rippleHover="true">
 
-            <Button
-                android:id="@+id/nopeBtn"
-                android:layout_width="110dp"
+                <Button
+                    android:id="@+id/yeapBtn"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rectangle"
+                    android:text="@string/yeap"
+                    android:textColor="@color/black" />
+
+
+            </com.balysv.materialripple.MaterialRippleLayout>
+
+            <com.balysv.materialripple.MaterialRippleLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="50dp"
-                android:background="@drawable/rectangle"
-                android:text="@string/nope"
-                android:textColor="@color/black" />
+                app:mrl_rippleOverlay="true"
+                app:mrl_rippleColor="@color/main_background_color"
+                app:mrl_rippleDelayClick="false"
+                app:mrl_rippleHover="true">
+
+                <Button
+                    android:id="@+id/nopeBtn"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rectangle"
+                    android:text="@string/nope"
+                    android:textColor="@color/black" />
+
+            </com.balysv.materialripple.MaterialRippleLayout>
 
         </RelativeLayout>
 
