--- a/bcapp_client/app/src/main/res/layout/fragment_account.xml
+++ b/bcapp_client/app/src/main/res/layout/fragment_account.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_account"
+    android:background="@color/main_background_color"
     tools:context=".Activities.Fragments.AccountFragment">
 
     <RelativeLayout
@@ -17,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:layout_centerHorizontal="true"
+            android:background="@drawable/rectangle"
             app:mrl_rippleColor="@color/main_background_color"
             app:mrl_rippleDelayClick="false"
             app:mrl_rippleHover="true"
@@ -37,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="150dp"
             android:layout_centerHorizontal="true"
+            android:background="@drawable/rectangle"
             app:mrl_rippleColor="@color/main_background_color"
             app:mrl_rippleDelayClick="false"
             app:mrl_rippleHover="true"
@@ -57,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="250dp"
             android:layout_centerHorizontal="true"
+            android:background="@drawable/rectangle"
             app:mrl_rippleColor="@color/main_background_color"
             app:mrl_rippleDelayClick="false"
             app:mrl_rippleHover="true"
