--- a/bcapp_client/app/src/main/res/layout/list.xml
+++ b/bcapp_client/app/src/main/res/layout/list.xml
@@ -1,45 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/main_background_color">
+    android:layout_height="70dp"
+    android:clickable="true"
+    android:background="@color/main_background_color"
+    android:focusable="true">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        tools:ignore="UselessParent">
+    <TextView
+        android:id="@+id/team_1_tv_in_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="15dp"
+        android:textColor="@color/main_text_color"
+        android:textSize="24sp" />
 
-        <TextView
-            android:id="@+id/team_1_tv_in_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_alignParentStart="true"
-            android:text="team 1"
-            android:textSize="24sp"
-            android:textColor="@color/main_text_color"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="@string/vs"
+        android:textColor="@color/main_text_color"
+        android:textSize="20sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="vs"
-            android:textSize="20sp"
-            android:textColor="@color/main_text_color"/>
+    <TextView
+        android:id="@+id/team_2_tv_in_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="35dp"
+        android:layout_marginTop="15dp"
+        android:textColor="@color/main_text_color"
+        android:textSize="24sp" />
 
-        <TextView
-            android:id="@+id/team_2_tv_in_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="30dp"
-            android:layout_alignParentEnd="true"
-            android:text="team 2"
-            android:textSize="24sp"
-            android:textColor="@color/main_text_color"/>
-
-    </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
