--- a/bcapp_client/app/src/main/res/layout/activity_auth.xml
+++ b/bcapp_client/app/src/main/res/layout/activity_auth.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/main_background_color"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -20,10 +20,20 @@
             android:id="@+id/startingLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/welcomeMessageTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:enabled="false"
+                android:gravity="center"
+                android:text="@string/welcomeMessage"
+                android:textColor="@color/main_text_color"
+                android:textSize="20sp" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/nicknameTIL"
@@ -67,26 +77,26 @@
 
             </android.support.design.widget.TextInputLayout>
 
-                <com.balysv.materialripple.MaterialRippleLayout
+            <com.balysv.materialripple.MaterialRippleLayout
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                app:mrl_rippleColor="@color/main_background_color"
+                app:mrl_rippleDelayClick="false"
+                app:mrl_rippleHover="true"
+                app:mrl_rippleOverlay="true">
+
+                <Button
+                    android:id="@+id/sendMessageBtn"
                     android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="16dp"
-                    app:mrl_rippleOverlay="true"
-                    app:mrl_rippleColor="@color/main_background_color"
-                    app:mrl_rippleDelayClick="false"
-                    app:mrl_rippleHover="true">
+                    android:layout_height="match_parent"
+                    android:background="@drawable/rectangle"
+                    android:gravity="center"
+                    android:text="@string/send_sms"
+                    android:textColor="@color/black" />
 
-                    <Button
-                        android:id="@+id/sendMessageBtn"
-                        android:layout_width="120dp"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/rectangle"
-                        android:gravity="center"
-                        android:text="@string/send_sms"
-                        android:textColor="@color/black" />
-
-                </com.balysv.materialripple.MaterialRippleLayout>
+            </com.balysv.materialripple.MaterialRippleLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/codeTil"
@@ -109,47 +119,47 @@
 
             </android.support.design.widget.TextInputLayout>
 
-                <com.balysv.materialripple.MaterialRippleLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="16dp"
-                    app:mrl_rippleOverlay="true"
-                    app:mrl_rippleColor="@color/main_background_color"
-                    app:mrl_rippleDelayClick="false"
-                    app:mrl_rippleHover="true">
+            <com.balysv.materialripple.MaterialRippleLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                app:mrl_rippleColor="@color/main_background_color"
+                app:mrl_rippleDelayClick="false"
+                app:mrl_rippleHover="true"
+                app:mrl_rippleOverlay="true">
 
-                    <Button
-                        android:id="@+id/checkBtn"
-                        android:layout_width="120dp"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/rectangle"
-                        android:gravity="center"
-                        android:text="@string/check"
-                        android:textColor="@color/black" />
+                <Button
+                    android:id="@+id/checkBtn"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/rectangle"
+                    android:gravity="center"
+                    android:text="@string/check"
+                    android:textColor="@color/black" />
 
-                </com.balysv.materialripple.MaterialRippleLayout>
+            </com.balysv.materialripple.MaterialRippleLayout>
 
-                <com.balysv.materialripple.MaterialRippleLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="16dp"
-                    app:mrl_rippleOverlay="true"
-                    app:mrl_rippleColor="@color/main_background_color"
-                    app:mrl_rippleDelayClick="false"
-                    app:mrl_rippleHover="true">
+            <com.balysv.materialripple.MaterialRippleLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                app:mrl_rippleColor="@color/main_background_color"
+                app:mrl_rippleDelayClick="false"
+                app:mrl_rippleHover="true"
+                app:mrl_rippleOverlay="true">
 
-                    <Button
-                        android:id="@+id/resetBtn"
-                        android:layout_width="120dp"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/rectangle"
-                        android:gravity="center"
-                        android:text="@string/reset"
-                        android:textColor="@color/black" />
+                <Button
+                    android:id="@+id/resetBtn"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/rectangle"
+                    android:gravity="center"
+                    android:text="@string/reset"
+                    android:textColor="@color/black" />
 
-                </com.balysv.materialripple.MaterialRippleLayout>
+            </com.balysv.materialripple.MaterialRippleLayout>
 
         </LinearLayout>
 
