--- a/iroha-android-sample/src/main/res/layout/activity_main.xml
+++ b/iroha-android-sample/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="16dp"
                             android:layout_marginStart="16dp"
-                            android:textColor="@color/text"
+                            android:textColor="@color/black"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toStartOf="@id/logout"
                             app:layout_constraintStart_toEndOf="@id/logo"
@@ -116,7 +116,7 @@
                             android:id="@+id/balance"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/text"
+                            android:textColor="@color/black"
                             android:textSize="25sp"
                             app:layout_constraintBottom_toBottomOf="@id/background"
                             app:layout_constraintEnd_toEndOf="parent"
