--- a/iroha-android-sample/src/main/res/layout/fragment_send.xml
+++ b/iroha-android-sample/src/main/res/layout/fragment_send.xml
@@ -51,26 +51,17 @@
 
         </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/or"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/or"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/amount_layout" />
-
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/send"
             android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_height="45dp"
             android:background="@color/iroha"
             android:text="@string/send"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="200dp"
+            tools:ignore="MissingConstraints" />
     </android.support.constraint.ConstraintLayout>
 </layout>
